--- a/package.json
+++ b/package.json
@@ -7,5 +7,10 @@
   },
   "dependencies": {
     "cli-welcome": "^2.2.2"
-  }
+  },
+  "keywords": [
+    "sajad sharhani",
+    "sajad",
+    "sharhani"
+  ]
 }
