--- a/package.json
+++ b/package.json
@@ -8,6 +8,10 @@
   },
   "dependencies": {
     "chalk": "^2.4.2",
+    "cli-alerts": "^1.2.2",
+    "cli-check-node": "^1.3.4",
+    "cli-handle-error": "^4.4.0",
+    "cli-handle-unhandled": "^1.1.1",
     "cli-welcome": "^2.2.2",
     "log-symbols": "^5.1.0"
   },
