--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "sajad": "index.js"
   },
   "dependencies": {
+    "boxen": "^6.2.1",
     "chalk": "^2.4.2",
     "cli-alerts": "^1.2.2",
     "cli-check-node": "^1.3.4",
