--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "cli-handle-unhandled": "^1.1.1",
     "cli-welcome": "^2.2.2",
     "log-symbols": "^5.1.0",
-    "meow": "^10.1.2"
+    "meow": "^10.1.2",
+    "node-fetch": "^3.2.0"
   },
   "keywords": [
     "sajad sharhani",
