--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "cli-welcome": "^2.2.2",
     "log-symbols": "^5.1.0",
     "meow": "^10.1.2",
-    "node-fetch": "^3.2.0"
+    "node-fetch": "^3.2.0",
+    "ora": "^6.0.1"
   },
   "keywords": [
     "sajad sharhani",
